# InsurancePlatformPy

./: .env.example  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260521_0000_baseline.py  20260521_0001_chat_domain.py  20260602_0002_referral_accruals_and_bonus_withdrawals.py  20260713_0003_user_status.py  20260714_0004_support_agents_expand.py  20260714_0005_sms_notifications.py  20260714_0006_applications.py  20260714_0007_deals.py  20260714_0008_partners_certificates.py  20260714_0009_sms_templates_setting.py  20260714_0010_drop_bonus_withdrawals.py  20260718_0011_template_phrases.py
app/: main.py
app/api/: __init__.py  dependencies.py  main_router.py  utils.py
app/core/: config.py  database.py  minio_client.py
app/models/: applications.py  audit_log.py  base.py  certificates.py  deals.py  partners.py  settings.py  sms_notification.py
app/repositories/: chat_repository.py  file_repository.py  message_repository.py  support_agent_repository.py
app/services/: application_service.py  audit_service.py  auth_service.py  bonus_service.py  certificate_service.py  code_generator_service.py  deal_service.py  errors.py  file_service.py  internal_service.py  notification_service.py  partner_service.py  referral_service.py  settings_service.py  sms_service.py  support_auth_service.py
app/tasks/: accrual_job.py  sms_job.py
docs/: frontend-integration.ru.md
scripts/: init_owner.py  run-dev.sh  run-local.sh  seed_templates.py
tests/: conftest.py
tests/e2e/: test_chat_smoke.py
(+87 files in other folders)
