[project]
name = "insuranceplatformpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "pydantic-settings>=2.0.0",
    "passlib[bcrypt]>=1.7.0",
    "email-validator>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.34.2",
    "httpx>=0.28.1",
    "redis>=7.4.0",
    "alembic>=1.18.4",
    "minio>=7.2.20",
    "python-multipart>=0.0.29",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-anyio>=0.0.0",
    "pytest-asyncio>=1.3.0",
]
